--- a/test/fixtures/image_items.yml
+++ b/test/fixtures/image_items.yml
@@ -1,17 +1,6 @@
-class Item < ActiveRecord::Base
-	store_accessor :tags
-	store_accessor :image_urls
-	store_accessor :image_paths
-
-	scope :not_finished, -> { where(is_downloaded: false)}
-	scope :bags_not_finished, -> {where(item_type: 'bags', is_downloaded: false)}
-	scope :shoes_not_finished, -> {where(item_type: 'shoes', is_downloaded: false)}
-	scope :cloth_not_finished, -> {where(item_type: 'cloth', is_downloaded: false)}
-end
-
 # == Schema Information
 #
-# Table name: items
+# Table name: image_items
 #
 #  id            :integer          not null, primary key
 #  source        :string
@@ -25,11 +14,23 @@ end
 #  is_scraped    :boolean          default(FALSE)
 #  is_downloaded :boolean          default(FALSE)
 #  tags          :hstore
-#  image_urls    :hstore
-#  image_paths   :hstore
-#  s3_image_urls :hstore
+#  image_url     :string
+#  image_path    :string
+#  s3_image_url  :string
 #  keywords      :hstore
 #  sim_hashes    :hstore
 #  created_at    :datetime         not null
 #  updated_at    :datetime         not null
 #
+
+# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+
+# This model initially had no columns defined.  If you add columns to the
+# model remove the '{}' from the fixture names and add the columns immediately
+# below each fixture, per the syntax in the comments below
+#
+one: {}
+# column: value
+#
+two: {}
+#  column: value
